# PL0-Compiler

./: .gitignore  CMakeLists.txt  README.md  build.gradle
app/: Main.cpp
expl/: sc.pl0.cl0  sc0.pl0  sc0.pl0.cl0  sc1.pl0  sc2.pl0
ext/CL0-Interpreter/src/: main.c
ext/PL0-VM/: CMakeLists.txt
ext/cl0-interpreter/: CMakeLists.txt
res/: sc1.pl0
res/Apps/PL0-VM/: CMakeLists.txt
res/Apps/PL0-VM/Code/: code.h  debug.h
res/Files/: sc0.pl0
source/comp/: Comp.h  CompPL0.cpp  CompPL0.h
source/fread/: FRead.h  FReadC.cpp  FReadC.h
source/lexer/: Lexer.h  LexerPL0.cpp  LexerPL0.h  Token.cpp  Token.h
source/main/: Main.cpp
source/model/cpp/: Compiler.cpp
source/model/hpp/: Compiler.hpp  IModel.hpp
source/parser/: Parser.h  ParserPEx86.h
source/view/: CLI.cpp  CLI.h  View.h
source/view/cpp/: CLI.cpp
source/view/hpp/: CLI.hpp  IView.hpp
src/: CMakeLists.txt  Main.cpp
src/Comp/: IComp.hh
src/Comp/PL0/: CompPL0.cc  CompPL0.hh  Generator.cc  Generator.hh  GeneratorPL0.cpp  GeneratorPL0.hh  Graph.cc  Graph.cpp  ILGen.cpp  ILGen.hh  LexerPL0.cpp  LexerPL0.hh  ParserPL0.cpp  ParserPL0.hh  Symbols.cc  Symbols.hh  Token.cc  Token.cpp  Tokenizer.cc  Tokenizer.hh  Trans.cc  Trans.cpp  Trans.hh
src/Data/: Data.cpp  IData.hh
src/Data/File/: DataFile.cc  DataFile.hh
src/Generator/: Generator.cpp  SymbolTab.cpp
src/Lexer/: Lexer.cpp  Zeichen.cpp
src/PL0-Comp/: CMakeLists.txt
src/PL0-Comp/Code/: Main.cc
src/PL0-Comp/Code/Comp/CompPL0/: CompEx.cc  CompEx.hh  CompPL0.cc  CompPL0.hh  Generator.cc  Generator.hh  Graph.cc  Graph.hh  ILGen.cc  ILGen.hh  Symbols.cc  Token.cc  Token.hh  Tokenizer.cc  Tokenizer.hh
src/PL0-Comp/Code/Comp/PL0toCL0/: CompPL0.cc  Generator.cc
src/PL0-Comp/Code/Data/: IData.hh
src/PL0-Comp/Code/Data/DataFile/: DataFile.cc  DataFile.hh
src/PL0-Comp/Code/View/: IView.hh
src/PL0-Comp/Code/View/CLI/: ViewCLI.hh
src/PL0-Comp/Code/View/ViewCLI/: ViewCLI.cc
src/PL0-Comp/Comp/PL0toCL0/: CompEx.cc  CompEx.hh  CompExcp.cc  CompExcp.hh  CompPL0.cc  Generator.cc  Generator.hh  Graph.cc  Graph.hh  ILGen.cc  ILGen.hh  Symbols.cc  Symbols.hh  Token.cc  Token.hh  Tokenizer.cc  Tokenizer.hh
src/PL0-Comp/Data/File/: DataFile.cc  DataFile.hh
src/PL0-Comp/View/CLI/: ViewCLI.cc  ViewCLI.hh
src/PL0-VM/: CMakeLists.txt  code.h  vm.c
src/Parser/: Graph.cpp  Parser.cpp  Trans.cpp
src/View/: IView.hh  View.cpp
src/View/CLI/: ViewCLI.cc
src/comp/: CompFactory.cpp  CompFactory.hpp  IComp.hpp
src/comp/comp_pl0/: CompEx.cpp  CompEx.hpp  CompPL0.cpp  CompPL0.hpp  Generator.cpp  Generator.hpp  Graph.cpp  Graph.hpp  ILGen.cpp  ILGen.hpp  Symbols.cpp  Symbols.hpp  Token.cpp  Tokenizer.cpp  Tokenizer.hpp
src/comp/cpp/: CompPL0.cpp
src/comp/headers/: Comp.h  CompPL0.h
src/comp/pl0tocl0/: CompEx.cpp  CompEx.hpp  CompPL0.cpp  CompPL0.hpp  Generator.cpp  Generator.hpp  Graph.cpp  Graph.hpp  ILGen.cpp  ILGen.hpp  Symbols.cpp  Symbols.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/data/: DataFactory.cpp  DataFactory.hpp  IData.hpp
src/data/data_file/: DataFile.cpp  DataFile.hpp
src/data/file/: DataFile.cpp  DataFile.hpp
src/fread/cpp/: FRead.cpp  FReadC.cpp
src/fread/headers/: FRead.h  FReadC.h  IFRead.h
src/lexer/cpp/: Lexer.cpp  LexerPL0.cpp  Token.cpp
src/lexer/headers/: ILexer.h  Lexer.h  LexerPL0.h
src/main/cpp/: main.cpp
src/model/cpp/: Compiler.cpp
src/model/headers/: Compiler.h  Model.h
src/parser/cpp/: Parser.cpp
src/parser/headers/: IParser.h
src/pl0compiler/common/: FileIO.cpp  FileIO.hpp  Logger.cpp  Logger.hpp  Utils.cpp  Utils.hpp
src/pl0compiler/compiler/: CompEx.cpp  CompEx.hpp  Compiler.cpp  Compiler.hpp  Generator.cpp  Generator.hpp  Graph.cpp  Graph.hpp  ILGen.cpp  ILGen.hpp  Symbols.cpp  Symbols.hpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/pl0compiler/fileio/: FileIO.cpp  FileIO.hpp
src/pl0compiler/logger/: Logger.cpp  Logger.hpp
src/view/: IView.hpp  ViewFactory.cpp  ViewFactory.hpp
src/view/cli/: ViewCLI.cpp  ViewCLI.hpp
src/view/cpp/: CLI.cpp
src/view/headers/: CLI.h  View.h
src/view/include/: CLI.h
src/view/view_cli/: ViewCLI.cpp  ViewCLI.hpp
vm/: gcc.bat  run.bat
